<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/lblCount"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/lbl_count"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/lblGuess"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/lbl_guess"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/lblResult"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/lbl_result"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
</LinearLayout>